// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pruebas en <Search /> > debe de mostrar a Batman y el input con el valor de query 1`] = `
<div>
  <div
    class="container py-4"
  >
    <h2
      class="text-center mb-4"
    >
      🔎 Buscar Héroes
    </h2>
    <hr
      class="mb-5"
    />
    <div
      class="row"
    >
      <div
        class="col-md-5"
      >
        <div
          class="card shadow-sm border-0"
        >
          <div
            class="card-body"
          >
            <h4
              class="card-title mb-3"
            >
              Búsqueda
            </h4>
            <form>
              <input
                autocomplete="off"
                class="form-control mb-3"
                name="searchText"
                placeholder="Escribe el nombre de un héroe..."
                type="text"
                value="batman"
              />
              <button
                class="btn btn-primary w-100"
              >
                Buscar
              </button>
            </form>
          </div>
        </div>
      </div>
      <div
        class="col-md-7 mt-4 mt-md-0"
      >
        <div
          class="card shadow-sm border-0"
        >
          <div
            class="card-body"
          >
            <h4
              class="card-title mb-3"
            >
              Resultados
            </h4>
            <div
              class="card shadow-sm border-0 rounded-4 h-100 d-flex flex-column animate__animated animate__fadeIn"
              id="dc-batman"
            >
              <img
                alt="Batman"
                class="card-img-top rounded-top-4"
                src="/assets/heroes/dc-batman.jpg"
                style="height: 300px; object-fit: cover;"
              />
              <div
                class="card-body d-flex flex-column "
              >
                <h4
                  class="card-title fw-bold text-primary"
                >
                  Batman
                </h4>
                <h6
                  class="text-muted mb-2"
                >
                  Bruce Wayne
                </h6>
                <p
                  class="mb-1"
                >
                  <strong>
                    Aparición:
                  </strong>
                   
                  Detective Comics #27
                </p>
                <p
                  class="mb-0 mt-auto"
                >
                  <strong>
                    Editorial:
                  </strong>
                   
                  DC Comics
                </p>
                <a
                  data-discover="true"
                  href="/hero/dc-batman"
                >
                   Leer más
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pruebas en <Search /> > debe de mostrar el componente correctamente 1`] = `
<div>
  <div
    class="container py-4"
  >
    <h2
      class="text-center mb-4"
    >
      🔎 Buscar Héroes
    </h2>
    <hr
      class="mb-5"
    />
    <div
      class="row"
    >
      <div
        class="col-md-5"
      >
        <div
          class="card shadow-sm border-0"
        >
          <div
            class="card-body"
          >
            <h4
              class="card-title mb-3"
            >
              Búsqueda
            </h4>
            <form>
              <input
                autocomplete="off"
                class="form-control mb-3"
                name="searchText"
                placeholder="Escribe el nombre de un héroe..."
                type="text"
                value=""
              />
              <button
                class="btn btn-primary w-100"
              >
                Buscar
              </button>
            </form>
          </div>
        </div>
      </div>
      <div
        class="col-md-7 mt-4 mt-md-0"
      >
        <div
          class="card shadow-sm border-0"
        >
          <div
            class="card-body"
          >
            <h4
              class="card-title mb-3"
            >
              Resultados
            </h4>
            <div
              class="alert alert-primary animate__animated animate__fadeIn"
            >
              Busca un héroe para ver los resultados
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
